--- a/ball.html
+++ b/ball.html
@@ -8,7 +8,7 @@
   <body>
     <canvas id="myCanvas" width="500" height="500" style="border:1px solid #d3d3d3; ">
     </canvas>
-    <script type="text/javascript" src="ball.js">
+    <script type="text/javascript" src="js/ball.js">
 
     </script>
   </body>
